--- a/AI.conf
+++ b/AI.conf
@@ -1,15 +1,19 @@
+
+
+
 server {
 	listen 127.0.0.1:4242;
 	server_name server.com www.server.com;
 	error_page 404 error_pages/404.html;
 	client_max_body_size	100000;
+	root web_root;
 
 	location / {
 		autoindex on;
         allow_methods GET POST DELETE;
 		root web_root;
 		index index.html index.php;
-		upload_dir web_root/uploads
+		upload_dir web_root/uploads;
 		cgi .php cgi-bin/php-cgi;
 	}
 
