Still setuping infra for m server config

--- a/AI.conf
+++ b/AI.conf
@@ -1,11 +1,10 @@
 
 
 
-server {
-	listen 127.0.0.1:4242;
+server { listen 127.0.0.1:4242;
 	server_name server.com www.server.com;
 	error_page 404 error_pages/404.html;
-	client_max_body_size	100000;
+	client_max_body_size 100000;
 	root web_root;
 
 	location / {
