--- a/AI.conf
+++ b/AI.conf
@@ -17,7 +17,7 @@ server { listen 127.0.0.1:4242;
 	}
 
 	location /potato/ {
-		autoindex on;
+		autoindex off;
 		root web_root;
         allow_methods GET POST DELETE;
 	}
