error_messages is done. parsing finally done !!

--- a/AI.conf
+++ b/AI.conf
@@ -21,7 +21,7 @@ server { listen 127.0.0.1:4242;
 	}
 
 	location /redirect/ {
-		return 301 https://google.com;
+		return 301 https:oogle.com;
 	}
 
 }
