timeOut_response fixed

--- a/linux.conf
+++ b/linux.conf
@@ -24,6 +24,7 @@ server
 
 	location / {
 		allow_methods GET POST DELETE;
+		root /nfs/sgoinfre/goinfre/Perso/anaji/Downloads/;
 		autoindex on;
 	}
 
@@ -39,6 +40,7 @@ server
 	root /nfs/homes/anaji/Desktop/Webserv/web_root/;
 
 	location / {
+		root /nfs/sgoinfre/goinfre/Perso/anaji/Downloads/;
 		allow_methods GET POST DELETE;
 		autoindex on;
 	}
