--- a/linux.conf
+++ b/linux.conf
@@ -2,12 +2,13 @@ server
 {
 	listen 127.0.0.1:4342;
 	server_name server1;
-	root /nfs/homes/anaji/Desktop/Webserv/web_root/;
+	root /nfs/homes/anaji/Desktop/test/website/;
 
 	location / {
 		root /nfs/sgoinfre/goinfre/Perso/anaji/Downloads/;
 		allow_methods GET POST DELETE;
 		cgi .py /usr/bin/python3;
+		cgi .php /usr/bin/php-cgi;
 		autoindex on;
 	}
 
@@ -24,7 +25,7 @@ server
 
 	location / {
 		allow_methods GET POST DELETE;
-		root /nfs/sgoinfre/goinfre/Perso/anaji/Downloads/;
+		root /nfs/homes/anaji/Desktop/Webserv/web_root/;
 		autoindex on;
 	}
 
@@ -40,7 +41,7 @@ server
 	root /nfs/homes/anaji/Desktop/Webserv/web_root/;
 
 	location / {
-		root /nfs/sgoinfre/goinfre/Perso/anaji/Downloads/;
+		root /nfs/homes/anaji/Desktop/Webserv/web_root/;
 		allow_methods GET POST DELETE;
 		autoindex on;
 	}
