final stage need to test

--- a/linux.conf
+++ b/linux.conf
@@ -26,6 +26,8 @@ server
 	location / {
 		allow_methods GET POST DELETE;
 		root /nfs/homes/anaji/Desktop/Webserv/web_root/;
+		cgi .py /usr/bin/python3;
+		cgi .php /usr/bin/php-cgi;
 		autoindex on;
 	}
 
@@ -41,8 +43,10 @@ server
 	root /nfs/homes/anaji/Desktop/Webserv/web_root/;
 
 	location / {
-		root /nfs/homes/anaji/Desktop/Webserv/web_root/;
+		root /nfs/homes/anaji/Desktop/Webserv/web_root/hjk;
 		allow_methods GET POST DELETE;
+		cgi .py /usr/bin/python3;
+		cgi .php /usr/bin/php-cgi;
 		autoindex on;
 	}
 
